# gtirb-rs

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
docs/: book.toml
docs/src/: README.md
docs/src/misc/: contributors.md
node_derive/: Cargo.toml
node_derive/src/: lib.rs
protos/: AuxData.proto  ByteInterval.proto  CFG.proto  CodeBlock.proto  DataBlock.proto  IR.proto  Module.proto  NOTE.md  Offset.proto  ProxyBlock.proto  Section.proto  Symbol.proto  SymbolicExpression.proto
src/: block.rs  byte_interval.rs  cfg.rs  io.rs  ir.rs  lib.rs  module.rs  node.rs  prelude.rs  section.rs  symbol.rs  symbolic_expression.rs  utils.rs
src/io/: parser.rs  writer.rs
src/ir/: address.rs  auxdata.rs  block.rs  byte_interval.rs  cfg.rs  ir.rs  module.rs  section.rs  symbol.rs  symbolic_expression.rs
src/utils/: error.rs
tests/: proc_derive_node.rs
