[package]
name = "gtirb-rs"
description = """
A Rust API for Intermediate Representation for Binary analysis and transformation (GTIRB).
"""

version = "0.1.0"

edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/horde-re/gtirb-rs/"
exclude = [".github", "CONTRIBUTING.md", "assets"]
keywords = [
    "reverse engineering",
    "binary analysis",
    "gtirb",
    "intermediate representation",
    "program analysis",
    "binary rewriting",
]

authors = ["abel <67806187+standard3@users.noreply.github.com>"]

[lib]
crate-type = ["lib"]

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4", "v8", "fast-rng", "serde"] }
node_derive = { path = "node_derive" }

[dev-dependencies]
impls = "1.0.3"
